# prefab

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/template1/: prefab.toml
examples/template1/template/: test.txt
src/: config.rs  errors.rs  lib.rs  main.rs  template.rs  tui.rs  util.rs
src/tui/: boolean.rs  choice.rs  mod.rs  number.rs  option_ui.rs  text.rs
tests/: config.rs  templates.rs
